--- a/training/Presentation/CS3 Conference Barcelona 6 March 2023/svgHeatmap.ipynb
+++ b/training/Presentation/CS3 Conference Barcelona 6 March 2023/svgHeatmap.ipynb
@@ -3,23 +3,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fa0fd3a",
+   "id": "9f451788",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run svgHeatmap.py\n",
-    "\n",
+    "from IPython.display import display\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "df = pd.DataFrame(np.random.random((20,50)))\n",
+    "from vois import svgHeatmap\n",
     "\n",
-    "heatmapChart(df, width=65.0, height=40.0, hTitle=5.0, wTitle=8.0, fontsize=0.8, decimals=3)"
+    "df = pd.DataFrame(np.random.random((20,50)))\n",
+    "display(svgHeatmap.heatmapChart(df, width=80.0, height=50.0, hTitle=6.0, wTitle=8.0))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ed97d85",
+   "id": "a99e5532",
    "metadata": {},
    "outputs": [],
    "source": []
