--- a/training/Presentation/CS3 Conference Barcelona 6 March 2023/svgRankChart.ipynb
+++ b/training/Presentation/CS3 Conference Barcelona 6 March 2023/svgRankChart.ipynb
@@ -2,45 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "0e176789",
+   "execution_count": null,
+   "id": "84152c8f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "451af56900254de4b401e693fe912404",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3f1d182c6c1d4324b79962c38d11a619",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output(layout=Layout(height='calc(80.000000vh + 20px)', margin='0px 0px 0px 0px', width='calc(20.000000vw + 10…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%run svgRankChart.py\n",
-    "\n",
+    "from IPython.display import display\n",
+    "from ipywidgets import widgets\n",
+    "from vois import svgRankChart\n",
     "import numpy as np\n",
     "import plotly.express as px\n",
     "\n",
+    "# List of sentences\n",
     "names = ['European society needs to grasp the opportunities brought by the digital transformation', \n",
     "         'A deep transformation such as the one facilitated by digital technologies',\n",
     "         'The progress needs to be evenly distributed across all regions',\n",
@@ -62,10 +35,11 @@
     "         'Policymakers are often asked to react quickly to new circumstances',\n",
     "         'Obtaining economic benefit from natural resources whilst maintaining natural capital',\n",
     "         'We must be able to create EU policies that  decouple resource use from economic development',\n",
-    "         'Robust, resilient and innovative EU economy'\n",
+    "         'Robust, resilient and innovative EU economy is a necessary condition for ensuring the well-being'\n",
     "         ]\n",
     "\n",
-    "values = np.random.uniform(low=0.1, high=1.0, size=(len(names)))\n",
+    "# Randomly generated values for each sentence\n",
+    "values = np.random.uniform(low=0.5, high=25.0, size=(len(names,)))\n",
     "\n",
     "debug = widgets.Output()\n",
     "display(debug)\n",
@@ -74,26 +48,24 @@
     "    with debug:\n",
     "        print(arg)\n",
     "\n",
-    "out = svgRankChart(names=names,\n",
-    "                   values=values,\n",
-    "                   width=20.0,\n",
-    "                   height=80.0,\n",
-    "                   splitnamelenght=45,\n",
-    "                   addposition=False,\n",
-    "                   fontsize=1.2,\n",
-    "                   selectfirstatstart=False,\n",
-    "                   colorlist=px.colors.sequential.Viridis,\n",
-    "                   hovercolor='blue',\n",
-    "                   enabledeselect=True,\n",
-    "                   on_change=on_change)\n",
-    "\n",
-    "out"
+    "out = svgRankChart.svgRankChart(names=names,\n",
+    "                                values=values,\n",
+    "                                width=20.0,\n",
+    "                                height=70.0,\n",
+    "                                splitnamelenght=45,\n",
+    "                                addposition=False,\n",
+    "                                fontsize=1.0,\n",
+    "                                selectfirstatstart=False,\n",
+    "                                colorlist=px.colors.sequential.Viridis,\n",
+    "                                hovercolor='blue',\n",
+    "                                on_change=on_change)\n",
+    "display(out)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "775520ea",
+   "id": "e97f1c7f",
    "metadata": {},
    "outputs": [],
    "source": []
