--- a/vois/vuetify/multiSwitchTest.ipynb
+++ b/vois/vuetify/multiSwitchTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b593317",
+   "id": "65401319",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,18 +16,20 @@
     "    with output:\n",
     "        print(value)\n",
     "\n",
-    "t = multiSwitch([True, True, False], ['Option1', 'Option2', 'Option3'], tooltips=['Tooltip for label1'], \n",
+    "\n",
+    "t = multiSwitch([True, True, False], ['Title', 'Abstract', 'Keywords'],\n",
+    "                tooltips=['Activate the search on paper title','Activate the search on paper abstract','Activate the search on paper keywords'], \n",
     "                onchange=onchange, row=True, width=90, justify='start', color='blue', rounded=False, outlined=True,\n",
     "                colorselected='#FFA300', colorunselected='#aaaaaa')\n",
     "\n",
-    "display(t.draw())\n",
+    "display(widgets.HBox([v.Html(tag='div', children=['Search in:'], class_='pa-0 ma-0 mt-2 mr-2'),t.draw()]))\n",
     "display(output)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76620f5f",
+   "id": "ff4408b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d925db07",
+   "id": "a92ec839",
    "metadata": {},
    "outputs": [],
    "source": []
