--- a/vois/vuetify/rangeSliderFloatTest.ipynb
+++ b/vois/vuetify/rangeSliderFloatTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28a0a230",
+   "id": "b78b1968",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
     "    with output:\n",
     "        print(value)\n",
     "\n",
-    "s = rangeSliderFloat(1.8, 2.5, text='Select Value in [1.0,3.0]:', minvalue=1.0, maxvalue=3.0, showpercentage=False, decimals=3,\n",
+    "s = rangeSliderFloat(1.8, 2.5, text='Select pressure level:', minvalue=1.0, maxvalue=3.0, showpercentage=False, decimals=3,\n",
     "                     resetbutton=True, showtooltip=True, onchange=onchange)\n",
     "display(s.draw())\n",
     "display(output)"
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73a6d90b",
+   "id": "429ad8c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "603ee74f",
+   "id": "d6a011bc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ac36327",
+   "id": "defa56b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1c766ab",
+   "id": "48f86336",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d2c28b6",
+   "id": "fc140412",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd28c9b9",
+   "id": "e5411859",
    "metadata": {},
    "outputs": [],
    "source": []
