--- a/vois/vuetify/basemapsTest.ipynb
+++ b/vois/vuetify/basemapsTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bae56a9f",
+   "id": "e3507c89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bccb0c0",
+   "id": "ad8676a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d46cf4f",
+   "id": "1016cace",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "isinstance(b.current_layer, ipyleaflet.leaflet.TileLayer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1404e4d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37579129",
+   "id": "21ca593a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe4f6017",
+   "id": "f6b34811",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aca1131a",
+   "id": "3911472d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1cf9bec4",
+   "id": "602afd6e",
    "metadata": {},
    "outputs": [],
    "source": []
