--- a/examples/notebooks/vuetify/pageTest.ipynb
+++ b/examples/notebooks/vuetify/pageTest.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "5750dcde",
+   "execution_count": 1,
+   "id": "2a0aad6a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "125dff7a72264fe9a08751eb6dbaf90f",
+       "model_id": "77d957db35234e70b83ccb67365edbef",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Output(layout=Layout(height='0px', width='0px'))"
+       "Output()"
       ]
      },
      "metadata": {},
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49324008",
+   "id": "220dda95",
    "metadata": {},
    "outputs": [],
    "source": []
