--- a/vois/vuetify/pageTest.ipynb
+++ b/vois/vuetify/pageTest.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "b125b834",
+   "execution_count": 4,
+   "id": "84b71623",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "125dff7a72264fe9a08751eb6dbaf90f",
+       "model_id": "447ef452d2a3473bbed657ec77782dac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -34,7 +34,7 @@
     "\n",
     "p = page('Application XYZ', 'Map page', output,\n",
     "         titlecolor='#008800', titledark=True, footercolor='#cccccc', footerdark=False,\n",
-    "         logoappurl='https://jeodpp.jrc.ec.europa.eu/services/shared/pngs/BDAP_Logo1024transparent.png',\n",
+    "         logoappurl='https://jeodpp.jrc.ec.europa.eu/services/shared/pngs/BDAP_Logo1024transparent.png', logowidth=100,\n",
     "         on_logoapp=on_click, copyrighttext='European Commission - Joint Research Centre',\n",
     "         show_back=True, show_help=True, on_help=on_click, show_credits=True, on_credits=on_click)\n",
     "card = p.create()\n",
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ce8dd19",
+   "id": "cc492a85",
    "metadata": {},
    "outputs": [],
    "source": []
