Changed APOD example

--- a/training/Module 9/7. Astronomy.ipynb
+++ b/training/Module 9/7. Astronomy.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "83b6d558",
+   "id": "4968a579",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,13 +27,13 @@
     "import requests\n",
     "import json\n",
     "\n",
-    "api_key = 'eobzKN3RhAY0Mg7HFeNzARmbJURbtH3fd9h0D1OL'"
+    "api_key = 'Put here your API key from APOD NASA service'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "b3d2a0fc",
+   "id": "59bea77b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "f39a1145",
+   "id": "82cb4a1e",
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0840f4e6",
+   "id": "8ff648e4",
    "metadata": {},
    "outputs": [],
    "source": []
