Added createFlatTreeview to treeview

--- a/vois/interMapTest.ipynb
+++ b/vois/interMapTest.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e54d330f",
+   "execution_count": 1,
+   "id": "762dcc82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,10 +18,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a19b8ede",
+   "execution_count": 2,
+   "id": "f9f211e5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9ba74522b90f484abee101a863b222c0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Map(center=[43, 12], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title'…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "##################################################################################################\n",
     "# Display data for world countries using BDAP country collection\n",
@@ -64,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5283539d",
+   "id": "79c2c550",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42244fae",
+   "id": "abe65fe9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b9169e2",
+   "id": "a43e625d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc02833c",
+   "id": "841c4ac9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ece0445f",
+   "id": "722ef56b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fac14718",
+   "id": "dc132bbd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01904655",
+   "id": "f580da43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8911e8b7",
+   "id": "ccf91a1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b088504e",
+   "id": "510cb2b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b285acef",
+   "id": "57117fe2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9969994",
+   "id": "68bf00a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76e92e28",
+   "id": "6443840b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "606a149f",
+   "id": "306a0bcb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -822,7 +837,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43068cca",
+   "id": "cd50999d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -832,7 +847,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "179270f6",
+   "id": "aab4ffd6",
    "metadata": {},
    "outputs": [],
    "source": []
