--- a/vois/vuetify/treeviewTest.ipynb
+++ b/vois/vuetify/treeviewTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6aeee0b8",
+   "id": "479ce63f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,25 +13,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "f60dfdd9",
+   "execution_count": null,
+   "id": "7efd18c1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "945ce541dc8b4bba9fbe6c913ab9ece6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Card(children=[Html(children=[CustomTreeview(activatable=True, color='green', events=['activate', 'change_sele…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# DYNAMIC ADDING OF CHILDREN TO A TREEVIEW\n",
     "%run treeview.py\n",
@@ -67,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fba8a96",
+   "id": "d16890ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bfb42b0",
+   "id": "6437f79f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b19427a7",
+   "id": "6e1ba967",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69677ce0",
+   "id": "1b60a820",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40a5043d",
+   "id": "85a2fbec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41f40330",
+   "id": "2b0ccd51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff951188",
+   "id": "7bf387af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "015713bc",
+   "id": "85d2801d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4108d6b4",
+   "id": "0328478e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9d1191a",
+   "id": "d09e88cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec77128f",
+   "id": "a9a9d0f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d85012c",
+   "id": "c7c0e405",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d525834",
+   "id": "c9c2127d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,34 +186,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9e19f81",
+   "id": "1e6545bf",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "65f8eccb",
+   "execution_count": null,
+   "id": "2873dad6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "35a505b44e7e4943906b92aea2cf6f70",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Card(children=[Html(children=[CustomTreeview(color='green', events=['activate', 'change_selection', 'onopening…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# TREE VIEW CREATED FROM A LIST OF STRINGS\n",
+    "# TREEVIEW CREATED FROM A HIERARCHICAL LIST OF STRINGS\n",
     "%run treeview.py\n",
     "\n",
     "def on_change(arg):\n",
@@ -247,25 +217,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "82036440",
+   "execution_count": null,
+   "id": "1ebf7d74",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3a899e361d824a9099b60d76e9003011",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Card(children=[Html(children=[CustomTreeview(color='green', events=['activate', 'change_selection', 'onopening…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "# FLAT TREEVIEW CREATED FROM A LIST OF STRINGS\n",
+    "%run treeview.py\n",
+    "\n",
+    "def on_change(arg):\n",
+    "    print(arg)\n",
+    "    \n",
+    "treecard = createFlatTreeview(['A','B','C','D','E'], \n",
+    "                              color='green', dark=False, width='500px', height='120px', on_change=on_change,\n",
+    "                              selectable=True, activatable=False, displayfullname=True, \n",
+    "                              select_all=False, selected=['B','D'],\n",
+    "                             ) #iconsshow=True, iconscolor='blue', iconsDict={'A': 'mdi-fire', 'D': 'mdi-anchor'})\n",
+    "treecard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4a455c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top = treeviewOperations(treecard)\n",
+    "top.getSelected()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49abe1ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top.setSelected([])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e17be66",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# SIMPLE TREE VIEW CREATED FROM A LIST OF STRINGS\n",
     "%run treeview.py\n",
@@ -282,8 +279,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "6ef96e15",
+   "execution_count": null,
+   "id": "170175f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,8 +289,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "c12c567b",
+   "execution_count": null,
+   "id": "f21db009",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,29 +299,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "3d1ce20c",
+   "execution_count": null,
+   "id": "91de7ab4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['A.1.1', 'A.3.1']"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "top.getSelected()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "9fc642f0",
+   "execution_count": null,
+   "id": "f460e423",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa37f5e3",
+   "id": "abdc398e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e2073be",
+   "id": "c18a97e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e87fe7c",
+   "id": "6f51e500",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c282986",
+   "id": "e500bcbb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f82c5791",
+   "id": "2adee2db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c58db4ec",
+   "id": "eb291b2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "366fca73",
+   "id": "de7c9b15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7ab9af1",
+   "id": "b14741d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53cda357",
+   "id": "20894333",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6334f7c0",
+   "id": "eddf2c09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "114574ff",
+   "id": "d6acca7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ac0e30c",
+   "id": "ba95eb8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d28d608",
+   "id": "d14f967d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc5c635f",
+   "id": "76fac7ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e711f667",
+   "id": "f382b7e1",
    "metadata": {},
    "outputs": [],
    "source": []
