Updated docs for popup

--- a/docs/3.2_referenceVuetify.rst
+++ b/docs/3.2_referenceVuetify.rst
@@ -190,6 +190,14 @@ palettePickerEx widget
 
 .. image:: figures/line.png
 
+popup widget
+------------
+
+.. automodule:: popup
+    :members:
+
+.. image:: figures/line.png
+
 progress widget
 ---------------
 
