--- a/vois/vuetify/popupTest.ipynb
+++ b/vois/vuetify/popupTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4041963d",
+   "id": "5a3aa875",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
     "                                           rootName='All',\n",
     "                                           height='270px')\n",
     "\n",
-    "p = popup(treecard, 'Sectors', popupheight=270)\n",
+    "p = popup(treecard, 'Sector', icon='mdi-car', popupheight=270)\n",
     "\n",
     "p.draw()"
    ]
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfb6251a",
+   "id": "a1e95021",
    "metadata": {},
    "outputs": [],
    "source": []
