Fixed bug in treeview activation

--- a/vois/svgUtilsTest.ipynb
+++ b/vois/svgUtilsTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa00f14d",
+   "id": "83c73db4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,10 +21,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "75582d8b",
+   "execution_count": 1,
+   "id": "fb62baee",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1f7d537a1a9c4e34a4ece0ce8d735900",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HTML(value='\\n<svg xmlns:svg=\"http://www.w3.org/2000/svg\" xmlns=\"http://www.w3.org/2000/svg\" width=\"340\" heigh…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -56,8 +71,112 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "id": "f1467647",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42.5 53.033008588991066 5.0 80.0\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ae777a8776784b13a69791ba4f09d414",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HTML(value='\\n<svg xmlns:svg=\"http://www.w3.org/2000/svg\" xmlns=\"http://www.w3.org/2000/svg\" width=\"340\" heigh…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "%run svgUtils.py\n",
+    "\n",
+    "scalemin = 5.0\n",
+    "scalemax = 80.0\n",
+    "\n",
+    "df = pd.DataFrame({1: scalemin, 2: scalemax}.items(),  columns=['code', 'value'])\n",
+    "\n",
+    "colorlist = ['#440154', '#482878', '#3e4989', '#31688e', '#26828e', '#1f9e89', '#35b779', '#6ece58', '#b5de2b', '#fde725'][::-1]  # Viridis\n",
+    "\n",
+    "svg = graduatedLegend(df, code_column='code',\n",
+    "                      colorlist=colorlist,\n",
+    "                      stdevnumber=2.0, \n",
+    "                      minallowed_value=scalemin,\n",
+    "                      maxallowed_value=scalemax,\n",
+    "                      legendtitle='2020 Total energy consumption',\n",
+    "                      legendunits='KTOE per 100K inhabit.',\n",
+    "                      fontsize=16,\n",
+    "                      width=340,\n",
+    "                      height=600)\n",
+    "display(HTML(svg))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "032d0ef5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>code</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [code, value]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "97ba4516",
+   "id": "4d3f668b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0991134d",
+   "id": "596cae04",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21ee8e0f",
+   "id": "80ca7a23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23552e9e",
+   "id": "1c3d4ada",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c33647cb",
+   "id": "ede2c7fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fe12db0",
+   "id": "409d3545",
    "metadata": {},
    "outputs": [],
    "source": []
