--- a/vois/vuetify/treeviewTest.ipynb
+++ b/vois/vuetify/treeviewTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8319741",
+   "id": "11a2b12c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b784211",
+   "id": "1f87e5e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "baa20434",
+   "id": "914b9ccc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41c55c4a",
+   "id": "a7373297",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50d17160",
+   "id": "7b831a99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc8221eb",
+   "id": "6331de25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4a551a4",
+   "id": "332b9871",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ea263b4",
+   "id": "28259865",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b571164",
+   "id": "30b0f98f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "311378cd",
+   "id": "71cd7eb2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "312f321d",
+   "id": "c5493755",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd36b22d",
+   "id": "6599fa71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7edaf6dd",
+   "id": "51f0b13b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "477cc8bd",
+   "id": "ceb27dea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c32e7b8c",
+   "id": "4ba645fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,17 +186,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "844af219",
+   "id": "a9b5cb97",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a935e7c1",
+   "execution_count": 10,
+   "id": "78fe045a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "76f4a4ea2120405094dc93941b6e79ea",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Card(children=[Html(children=[CustomTreeview(color='green', events=['activate', 'change_selection', 'onopening…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# TREEVIEW CREATED FROM A HIERARCHICAL LIST OF STRINGS\n",
     "%run treeview.py\n",
@@ -217,29 +232,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "13f8b11a",
+   "execution_count": 18,
+   "id": "9e58a9b9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "017e24af18314835bda2966b1ee5528d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Card(children=[Html(children=[CustomTreeview(activatable=True, color='green', events=['activate', 'change_sele…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# FLAT TREEVIEW CREATED FROM A LIST OF STRINGS\n",
     "%run treeview.py\n",
     "\n",
     "def on_change(arg):\n",
-    "    print(arg)\n",
+    "    print('Selected: ', arg)\n",
+    "\n",
+    "def on_activated(arg):\n",
+    "    print('Active: ', arg)\n",
     "    \n",
     "treecard = createFlatTreeview(['A','B','C','D','E'], \n",
-    "                              color='green', dark=False, width='500px', height='120px', on_change=on_change,\n",
-    "                              selectable=True, activatable=False, displayfullname=True, \n",
+    "                              color='green', dark=False, width='500px', height='120px',\n",
+    "                              selectable=True, activatable=True, displayfullname=True, \n",
     "                              select_all=False, selected=['B','D'],\n",
-    "                             ) #iconsshow=True, iconscolor='blue', iconsDict={'A': 'mdi-fire', 'D': 'mdi-anchor'})\n",
+    "                              on_change=on_change,\n",
+    "                              on_activated=on_activated)\n",
     "treecard"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0feec421",
+   "id": "5c1eb77c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8d1b6f6",
+   "id": "b4079d85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,16 +293,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a0b8403e",
+   "execution_count": 17,
+   "id": "b7a598a7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1382ab0ce67841e48298763324454f22",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Card(children=[Html(children=[CustomTreeview(color='green', events=['activate', 'change_selection', 'onopening…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# SIMPLE TREE VIEW CREATED FROM A LIST OF STRINGS\n",
     "%run treeview.py\n",
     "\n",
     "def on_change(arg):\n",
     "    print(arg)\n",
+    "    \n",
+    "def on_activated(arg):\n",
+    "    print('Active: ', arg)\n",
     "    \n",
     "treecard = createTreeviewFromList(['A','A.1','A.2','A.1.1','A.3.1','A.4.1.2','A.5.2.1','A.4.2.3.1','B','B.A'], separator='.', rootName='Root', expand_selection_to_parents=False, \n",
     "                                  color='green', dark=False, width='500px', height='550px', on_change=on_change, on_activated=on_activated,\n",
@@ -280,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a3cf4c5",
+   "id": "76b769d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69ebf88c",
+   "id": "f21fa43c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "419720c1",
+   "id": "1f306baa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdf3e33c",
+   "id": "1ee7da0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "947222cd",
+   "id": "3ff42414",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "587f4ef1",
+   "id": "af514c09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2501d851",
+   "id": "865da436",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98d5cc84",
+   "id": "3b64e890",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e467971",
+   "id": "25ca8ec9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a68033ea",
+   "id": "4e860426",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b7e3284",
+   "id": "4ced91dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13e15e64",
+   "id": "2a408b8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2ac49a1",
+   "id": "8a9ec438",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "309b4104",
+   "id": "0cd664d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c75bf52",
+   "id": "40db7664",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "967d98b9",
+   "id": "11ff2f65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98b409cf",
+   "id": "ce3e1cd5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "399e91e2",
+   "id": "58923a5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed2e63a8",
+   "id": "fc468085",
    "metadata": {},
    "outputs": [],
    "source": []
