Spacing in Graduated legend

--- a/vois/vuetify/palettePickerExTest.ipynb
+++ b/vois/vuetify/palettePickerExTest.ipynb
@@ -2,10 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "14e83179",
+   "execution_count": 1,
+   "id": "ab2da5f5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2df5fcf68ec54f279f85f8610eed3a8e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "426fe56b9c234b11b8271ba6fb537b7d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(Html(children=[Select(background_color='white', chips=False, class_='pa-0 mx-0 m…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%run palettePickerEx.py\n",
     "\n",
@@ -25,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "426775f6",
+   "id": "e820d87f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7abe8a9e",
+   "id": "ec815552",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eef29c58",
+   "id": "6e06126b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "710bac71",
+   "id": "592e041c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -64,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c239f4de",
+   "id": "420cb46a",
    "metadata": {},
    "outputs": [],
    "source": []
