Added params to popup

--- a/vois/vuetify/popupTest.ipynb
+++ b/vois/vuetify/popupTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28cf8177",
+   "id": "abddc418",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f03215e",
+   "id": "ead62f74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run popup.py\n",
+    "%run palettePicker.py\n",
+    "\n",
+    "from ipywidgets import widgets\n",
+    "\n",
+    "output = widgets.Output()\n",
+    "display(output)\n",
+    "\n",
+    "def onchange(colors,interpolate):\n",
+    "    pass\n",
+    "    #with output:\n",
+    "    #    print(colors,interpolate)\n",
+    "\n",
+    "pal = palettePickerEx(family='sequential', width=250, onchange=onchange)\n",
+    "pal.value = 'Turbo'\n",
+    "card = v.Card(flat=True, class_='pa-0 ma-0 mt-2 ml-2', children=[pal.draw()])\n",
+    "p = popup(card, '', text=True, icon='mdi-palette-outline', outlined=False, buttonwidth=100, popupwidth=450, popupheight=120,\n",
+    "          open_on_hover=False, close_on_click=False, close_on_content_click=False)\n",
+    "\n",
+    "p.draw()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "564332c8",
    "metadata": {},
    "outputs": [],
    "source": []
