Fixed buttonheight in popup

--- a/vois/vuetify/popupTest.ipynb
+++ b/vois/vuetify/popupTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abddc418",
+   "id": "9ed1e9a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,13 +22,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ead62f74",
+   "execution_count": 39,
+   "id": "23aa2f98",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9a8b1bb4131e496dad4ca1785b901202",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3bd93593d7a74e739c19edc0dcef4eec",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Menu(children=[Card(children=[Card(children=[VBox(children=(HBox(children=(Html(children=[Select(background_co…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%run popup.py\n",
-    "%run palettePicker.py\n",
+    "%run palettePickerEx.py\n",
     "\n",
     "from ipywidgets import widgets\n",
     "\n",
@@ -52,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "564332c8",
+   "id": "d6ce86ae",
    "metadata": {},
    "outputs": [],
    "source": []
